# DLT_Template

./: .mypy.ini  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  pyproject.toml
dlt_pipeline/: data_quality_checks.py  pipeline.py  pyproject.toml  transformations.py
dlt_pipeline/tests/: test_dlt_pipeline.py
tests/: test_dlt_pipeline.py
