[tool.poetry]
name = "dlt_pipeline"
version = "0.1.0"
description = ""
authors = ["Nicolas Jean <nicolasj@sicara.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^6.4"
pylint = "^2.13.9"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.960"
databricks-cli = "^0.16.6"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
